--- a/index.html
+++ b/index.html
@@ -1,3 +1,400 @@
+<!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-On hiatus.
+	<head>
+		<title>Sonia Rego</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="logo">
+							<span class="icon fa-tree solid"></span> 
+						</div>
+						<div class="content">
+							<div class="inner">
+								<h1>Sonia Rego</h1>
+								<p> walking guide, writer, guardian to rescue dogs</p>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href="#intro">About Me</a></li>
+								<li><a href="#work">Guiding</a></li>
+								<li><a href="#about">Writing</a></li>
+								<li><a href="#contact">Other</a></li>
+								<!--<li><a href="#elements">Elements</a></li>-->
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- Intro -->
+							<article id="intro">
+								<h2 class="major">About Me</h2>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>I am an American-Canadian living in Galloway, Scotland with <a href= "https://mkusner.github.io/"> Matt Kusner </a> and our two senior rescue dogs, <a href=" https://www.loveunderdogs.org/">Nora Ruth and Karl T </a>. I was a public health scientist, and am now a writer and outdoor guide. </p>
+							</article>
+
+						<!-- Work -->
+							<article id="work">
+								<h2 class="major">Guiding</h2>
+								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<p>I learned to love the outdoors later in life- I did not grow up in a place or culture that gave me opportunities to learn about hiking, camping, or the joy of sitting under an ancient tree. </p> 
+
+								<p> Because of this, I am interested in working with folks who want to be in the outdoors, but feel worried about their skills, or worry they might not belong. I welcome ANYONE who wants to walk- I am LGBT+ friendly, and welcome those from diverse backgrounds. </p>
+
+								<p> I am a <a href="https://www.gsabiosphere.org.uk/">Galloway and Southern Ayrshire UNESCO Biosphere</a> trained guide, am a <a href="https://lnt.org/why/7-principles/"> Leave No Trace </a> practitioner, and have my outdoor first aid qualification. </p> 
+
+
+								<p> I specialise in chill walking, and offer two walks in the Galloway Forest Park. Learn more at Galloway Slow Walks.</p>
+							</article>
+
+						<!-- About -->
+							<article id="about">
+								<h2 class="major">Writing</h2>
+								<span class="image main"><img src="images/pic03.JPG" alt="" /></span>
+								<p><b><u><center>Essays</center></u></b></p>
+
+<p><a href="https://wheretheleavesfall.com/explore/article-index/without-vultures/"><b>Without Vultures</b> </a>
+/ Where the Leaves Fall, Issue # 9. 
+ </p>
+
+
+<p><a href="https://wheretheleavesfall.com/explore/article-index/with-my-hands-in-the-soil/"><b>With My Hands in the Soil</b> </a>
+/ Where the Leaves Fall, Issue # 4. 
+ </p>
+
+
+<p><a href="https://wheretheleavesfall.com/explore/pictures/saving-seed/"><b>Saving Seed</b> </a>
+/ Where the Leaves Fall, Issue # 10. 
+ </p>
+
+<p><b><u><center>Other</center></u></b></p>
+
+<p><a href="https://dgtrails.org/southern-upland-way-the-preamble/">Southern Upland Way: The Preamble </a> </p>
+
+
+
+
+<p><b><u><center> Academic Publications </center></u></b></p>
+
+
+
+<p>Gautham, M, Miller, R, <b>Rego, S</b>, et al. <a href="https://doi.org/10.3390/antibiotics11040523">Availability, Prices and Affordability of Antibiotics Stocked by Informal Providers in Rural India: A Cross-Sectional Survey.</a> Antibiotics. (2022). </p>
+
+
+<p>Aftab, W, Khan, M, <b>Rego, S</b>, et al. <a href="https://doi.org/10.1186/s12960-021-00629-5">Variations in regulations to control standards for training and licensing of physicians: a multi-country comparison.</a>  Hum Resour Health (2021). </p>
+
+
+<p>Khan MS*, <b>Rego S*</b>, Rajal JB, Bond V, Fatima RK, Isani AK, et al. <a href=" https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0244936">Mitigating the impact of COVID-19 on tuberculosis and HIV services: A cross-sectional survey of 669 health professionals in 64 low and middle-income countries. </a> PLoS ONE (2021) </p>
+
+<p>Khan MS; Bory S, <b>Rego S</b>, Suy, S, Durrance-Bagale A, Sultana Z, Chhorn S, Phou S, Prien C, Heng S, Hanefeld J, Hasan R , Saphonn V. <a href=" https://doi.org/10.1186/s12960-020-0452-7">Is enhancing the professionalism of healthcare providers critical to tackling antimicrobial resistance in low- and middle-income countries? </a>  Human Resources for Health (2020) </p>
+
+<p><b>Rego S</b>, Suy S, Bory S, Chhorn, S, Phou S, Prien C, Heng S, Wu S, Legido-Quigley H, Hanefeld J, Saphonn V, Khan, MS. <a href="https://gh.bmj.com/content/4/5/e001787">Invisible medicine sellers and their use of antibiotics: a qualitative study in Cambodia.</a> BMJ Global Health. (2019).</p>  
+
+<p>Khan MS, <b>Rego S</b>, Wu S, Coker R, Heymann D, Legido-Quigley H. Health systems barriers to controlling infectious diseases in low and middle income Asian countries in Resilient and people-centred health systems: Progress, challenges and future directions in Asia (Eds Legido-Quigley H, Asgari-Jirhandeh N) (2018).</p>
+
+</p>
+
+							</article>
+
+						<!-- Contact -->
+							<article id="contact">
+								<h2 class="major">Qualifications/Other</h2>
+								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<p><b><u><center>Qualifications</center></u></b></p>
+								<p> Outdoor First Aid (2023)
+								<br>Level 3 Certificate in Environmental Conservation and Countryside Management (2022)
+<br>Level 2 Certificate in Understanding Climate Change (2022)
+<br>Level 1 Award in Safeguarding in a Learning Environment (2022)
+<br>Level 1 Award in Land-based Studies (2022)
+<br>Level 1 Award in Work Based Horticulture (2017)
+<br>Master of Public Health (2014)
+<br>B.A. Psychology (2010)</p>
+	
+<p><b><u><center>Other</center></u></b></p>
+
+								<p> I speak Kazakh (intermediate high), Uzbek (intermediate low) and can bumble around in present tense French and Spanish </p>
+<p>I was the seed saving project manager for 3 years at OmVed Gardens, running workshops on compost, gardening, and seed saving for a more resilient future. My team won a silver medal at the Chelsea Flower Show in 2022 for our exhibition, <a href="https://www.savingseedbyomved.com/">Saving Seed</a> 
+
+</p>
+							</article>
+
+						<!-- Elements -->
+							<article id="elements">
+								<h2 class="major">Elements</h2>
+
+								<section>
+									<h3 class="major">Text</h3>
+									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
+									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+									<hr />
+									<h2>Heading Level 2</h2>
+									<h3>Heading Level 3</h3>
+									<h4>Heading Level 4</h4>
+									<h5>Heading Level 5</h5>
+									<h6>Heading Level 6</h6>
+									<hr />
+									<h4>Blockquote</h4>
+									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+									<h4>Preformatted</h4>
+									<pre><code>i = 0;
+
+while (!deck.isInOrder()) {
+    print 'Iteration ' + i;
+    deck.shuffle();
+    i++;
+}
+
+print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+								</section>
+
+								<section>
+									<h3 class="major">Lists</h3>
+
+									<h4>Unordered</h4>
+									<ul>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Sagittis adipiscing.</li>
+										<li>Felis enim feugiat.</li>
+									</ul>
+
+									<h4>Alternate</h4>
+									<ul class="alt">
+										<li>Dolor pulvinar etiam.</li>
+										<li>Sagittis adipiscing.</li>
+										<li>Felis enim feugiat.</li>
+									</ul>
+
+									<h4>Ordered</h4>
+									<ol>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Etiam vel felis viverra.</li>
+										<li>Felis enim feugiat.</li>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Etiam vel felis lorem.</li>
+										<li>Felis enim et feugiat.</li>
+									</ol>
+									<h4>Icons</h4>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+									</ul>
+
+									<h4>Actions</h4>
+									<ul class="actions">
+										<li><a href="#" class="button primary">Default</a></li>
+										<li><a href="#" class="button">Default</a></li>
+									</ul>
+									<ul class="actions stacked">
+										<li><a href="#" class="button primary">Default</a></li>
+										<li><a href="#" class="button">Default</a></li>
+									</ul>
+								</section>
+
+								<section>
+									<h3 class="major">Table</h3>
+									<h4>Default</h4>
+									<div class="table-wrapper">
+										<table>
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Description</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Item One</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Two</td>
+													<td>Vis ac commodo adipiscing arcu aliquet.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Three</td>
+													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Four</td>
+													<td>Vitae integer tempus condimentum.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Five</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+											</tbody>
+											<tfoot>
+												<tr>
+													<td colspan="2"></td>
+													<td>100.00</td>
+												</tr>
+											</tfoot>
+										</table>
+									</div>
+
+									<h4>Alternate</h4>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Description</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Item One</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Two</td>
+													<td>Vis ac commodo adipiscing arcu aliquet.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Three</td>
+													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Four</td>
+													<td>Vitae integer tempus condimentum.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Five</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+											</tbody>
+											<tfoot>
+												<tr>
+													<td colspan="2"></td>
+													<td>100.00</td>
+												</tr>
+											</tfoot>
+										</table>
+									</div>
+								</section>
+
+								<section>
+									<h3 class="major">Buttons</h3>
+									<ul class="actions">
+										<li><a href="#" class="button primary">Primary</a></li>
+										<li><a href="#" class="button">Default</a></li>
+									</ul>
+									<ul class="actions">
+										<li><a href="#" class="button">Default</a></li>
+										<li><a href="#" class="button small">Small</a></li>
+									</ul>
+									<ul class="actions">
+										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
+										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
+									</ul>
+									<ul class="actions">
+										<li><span class="button primary disabled">Disabled</span></li>
+										<li><span class="button disabled">Disabled</span></li>
+									</ul>
+								</section>
+
+								<section>
+									<h3 class="major">Form</h3>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<label for="demo-name">Name</label>
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+											</div>
+											<div class="field half">
+												<label for="demo-email">Email</label>
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+											</div>
+											<div class="field">
+												<label for="demo-category">Category</label>
+												<select name="demo-category" id="demo-category">
+													<option value="">-</option>
+													<option value="1">Manufacturing</option>
+													<option value="1">Shipping</option>
+													<option value="1">Administration</option>
+													<option value="1">Human Resources</option>
+												</select>
+											</div>
+											<div class="field half">
+												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
+												<label for="demo-priority-low">Low</label>
+											</div>
+											<div class="field half">
+												<input type="radio" id="demo-priority-high" name="demo-priority">
+												<label for="demo-priority-high">High</label>
+											</div>
+											<div class="field half">
+												<input type="checkbox" id="demo-copy" name="demo-copy">
+												<label for="demo-copy">Email me a copy</label>
+											</div>
+											<div class="field half">
+												<input type="checkbox" id="demo-human" name="demo-human" checked>
+												<label for="demo-human">Not a robot</label>
+											</div>
+											<div class="field">
+												<label for="demo-message">Message</label>
+												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" class="primary" /></li>
+											<li><input type="reset" value="Reset" /></li>
+										</ul>
+									</form>
+								</section>
+
+							</article>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">&copy; Sonia Rego, 2023 </p>
+					</footer>
+
+			</div>
+
+		<!-- BG -->
+			<div id="bg"></div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
+
