--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sonia Rego</h1>
-								<p> walking guide, writer, guardian to rescue dogs</p>
+								<p> public health professional, writer, guardian to rescue dogs</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#work">Guiding</a></li>
+								<li><a href="#work">Career</a></li>
 								<li><a href="#about">Writing</a></li>
-								<li><a href="#contact">Other</a></li>
+								<li><a href="#contact">Canines</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -46,21 +46,28 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>I am an American-Canadian living in Galloway, Scotland with <a href= "https://mkusner.github.io/"> Matt Kusner </a> and our two senior rescue dogs, <a href=" https://www.loveunderdogs.org/">Nora Ruth and Karl T </a>. I was a public health scientist, and am now a writer and outdoor guide. </p>
+								<p>I am an American-Canadian living in the beautiful southwest of Scotland with <a href= "https://mkusner.github.io/"> Matthew Kusner </a> and our two senior rescue dogs, <a href=" https://www.loveunderdogs.org/">Nora Ruth and Karl T </a> </p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Guiding</h2>
+								<h2 class="major">Career</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>I learned to love the outdoors later in life- I did not grow up in a place or culture that gave me opportunities to learn about hiking, camping, or the joy of sitting under an ancient tree. </p> 
+								<p> INSERT HERE  
+<!-- <br>Level 2 Certificate in Understanding Climate Change (2022)
+<br>Level 1 Award in Safeguarding in a Learning Environment (2022)
+<br>Level 1 Award in Land-based Studies (2022)
+<br>Level 1 Award in Work Based Horticulture (2017) -->
+<br>Master of Public Health (2014)
+<br>B.A. Psychology (2010)</p>
+	
+<p><b><u><center>Other</center></u></b></p>
 
-								<p> Because of this, I am interested in working with folks who want to be in the outdoors, but feel worried about their skills, or worry they might not belong. I welcome ANYONE who wants to walk- I am LGBT+ friendly, and welcome those from diverse backgrounds. </p>
+								<p> I speak Kazakh (intermediate high), Uzbek (intermediate low) and can bumble around in present tense French and Spanish </p> I have my certificate in Outdoor First Aid (2023)
+								<br> a Level 3 Certificate in Environmental Conservation and Countryside Management (2022)
+<p>I was the seed saving project manager for 3 years at OmVed Gardens, running workshops on compost, gardening, and seed saving for a more resilient future. My team won a silver medal at the Chelsea Flower Show in 2022 for our exhibition, <a href="https://www.savingseedbyomved.com/">Saving Seed</a> 
 
-								<p> I am a <a href="https://www.gsabiosphere.org.uk/">Galloway and Southern Ayrshire UNESCO Biosphere</a> trained guide, am a <a href="https://lnt.org/why/7-principles/"> Leave No Trace </a> practitioner, and have my outdoor first aid qualification. </p> 
-
-
-								<p> I specialise in chill walking, and offer two walks in the Galloway Forest Park. Learn more at Galloway Slow Walks.</p>
+</p>
 							</article>
 
 						<!-- About -->
@@ -114,15 +121,15 @@
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Qualifications/Other</h2>
+								<h2 class="major">Canines/Other</h2>
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<p><b><u><center>Qualifications</center></u></b></p>
 								<p> Outdoor First Aid (2023)
 								<br>Level 3 Certificate in Environmental Conservation and Countryside Management (2022)
-<br>Level 2 Certificate in Understanding Climate Change (2022)
+<!-- <br>Level 2 Certificate in Understanding Climate Change (2022)
 <br>Level 1 Award in Safeguarding in a Learning Environment (2022)
 <br>Level 1 Award in Land-based Studies (2022)
-<br>Level 1 Award in Work Based Horticulture (2017)
+<br>Level 1 Award in Work Based Horticulture (2017) -->
 <br>Master of Public Health (2014)
 <br>B.A. Psychology (2010)</p>
 	
