--- a/index.html
+++ b/index.html
@@ -53,21 +53,24 @@
 							<article id="work">
 								<h2 class="major">Career</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p> INSERT HERE  
+								<p> I currently work for NatureScot, an organisation that advises the Scottish Government on nature conservation. 
+
+Prior to this, I served with the United States Peace Corps in Kazakhstan (2010-2011), acquired a Master of Public Health (2012-2014), worked in racial health disparities research for the Washington University in St. Louis Medical School (2013), was a refugee health specialist at the International Institute of St. Louis (2014-2015), served as the Health Programme Coordinator for the Ghana Health and Education Initiative (2016), re-trained and worked as an organic grower (2017), and spent 3 years as a research fellow at the London School of Hygiene and Tropical Medicine (2018-2021) working on drivers of antimicrobial resistance.
+
+ <p>I was the seed saving project manager for 3 years at OmVed Gardens (2020-2023), running workshops on compost, gardening, and seed saving for a more resilient future. My team won a silver medal at the Chelsea Flower Show in 2022 for our exhibition, <a href="https://www.savingseedbyomved.com/">Saving Seed</a>  </p>
+
+
+
+<p> I speak Kazakh (intermediate high), Uzbek (intermediate low) and can bumble around in present tense French</p>
+
 <!-- <br>Level 2 Certificate in Understanding Climate Change (2022)
 <br>Level 1 Award in Safeguarding in a Learning Environment (2022)
 <br>Level 1 Award in Land-based Studies (2022)
 <br>Level 1 Award in Work Based Horticulture (2017) -->
-<br>Master of Public Health (2014)
-<br>B.A. Psychology (2010)</p>
-	
-<p><b><u><center>Other</center></u></b></p>
 
-								<p> I speak Kazakh (intermediate high), Uzbek (intermediate low) and can bumble around in present tense French and Spanish </p> I have my certificate in Outdoor First Aid (2023)
-								<br> a Level 3 Certificate in Environmental Conservation and Countryside Management (2022)
-<p>I was the seed saving project manager for 3 years at OmVed Gardens, running workshops on compost, gardening, and seed saving for a more resilient future. My team won a silver medal at the Chelsea Flower Show in 2022 for our exhibition, <a href="https://www.savingseedbyomved.com/">Saving Seed</a> 
 
-</p>
+
+								
 							</article>
 
 						<!-- About -->
@@ -135,8 +138,7 @@
 	
 <p><b><u><center>Other</center></u></b></p>
 
-								<p> I speak Kazakh (intermediate high), Uzbek (intermediate low) and can bumble around in present tense French and Spanish </p>
-<p>I was the seed saving project manager for 3 years at OmVed Gardens, running workshops on compost, gardening, and seed saving for a more resilient future. My team won a silver medal at the Chelsea Flower Show in 2022 for our exhibition, <a href="https://www.savingseedbyomved.com/">Saving Seed</a> 
+								
 
 </p>
 							</article>
@@ -387,7 +389,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Sonia Rego, 2023 </p>
+						<p class="copyright">&copy; Sonia Rego, 2024 </p>
 					</footer>
 
 			</div>
