--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sonia Rego</h1>
-								<p> public health professional, writer, guardian to rescue dogs</p>
+								<p> public health professional (most of the time), writer, guardian to rescue dogs</p>
 							</div>
 						</div>
 						<nav>
@@ -53,11 +53,11 @@
 							<article id="work">
 								<h2 class="major">Career</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p> I currently work for NatureScot, an organisation that advises the Scottish Government on nature conservation. 
+								<p> I currently work for <a href="https://www.nature.scot/">NatureScot</a>, an organisation that advises the Scottish Government on nature conservation. </p>
 
-Prior to this, I served with the United States Peace Corps in Kazakhstan (2010-2011), acquired a Master of Public Health (2012-2014), worked in racial health disparities research for the Washington University in St. Louis Medical School (2013), was a refugee health specialist at the International Institute of St. Louis (2014-2015), served as the Health Programme Coordinator for the Ghana Health and Education Initiative (2016), re-trained and worked as an organic grower (2017), and spent 3 years as a research fellow at the London School of Hygiene and Tropical Medicine (2018-2021) working on drivers of antimicrobial resistance.
+<p>Prior to this, I served as an education volunteer with the <a href="https://www.peacecorps.gov/">United States Peace Corps</a> in Kazakhstan (2010-2011), acquired a Master of Public Health (2012-2014) from the <a href="https://brownschool.washu.edu/ ">George Warren Brown School of Social Work and Public Health</a> on a full service scholarship, worked in racial health disparities research for the <a href="https://publichealthsciences.wustl.edu/">Washington University in St. Louis Medical School</a> (2013), was a refugee health specialist at the <a href="https://www.iistl.org/">International Institute of St. Louis</a> (2014-2015), served as the Health Programme Coordinator for the <a href="https://www.ghei.org/ ">Ghana Health and Education Initiative </a> (2016), re-trained and worked as an organic grower (2017), and spent 3 years as a research fellow at the <a href="https://www.lshtm.ac.uk/">London School of Hygiene and Tropical Medicine</a> (2018-2021) working on drivers of antimicrobial resistance.
 
- <p>I was the seed saving project manager for 3 years at OmVed Gardens (2020-2023), running workshops on compost, gardening, and seed saving for a more resilient future. My team won a silver medal at the Chelsea Flower Show in 2022 for our exhibition, <a href="https://www.savingseedbyomved.com/">Saving Seed</a>  </p>
+ <p>I was the seed saving project manager for 3 years at <a href="https://omvedgardens.com/ ">OmVed Gardens </a> (2020-2023), running workshops on compost, gardening, and seed saving for a more resilient future. My team won a silver medal at the Chelsea Flower Show in 2022 for our exhibition, <a href="https://www.savingseedbyomved.com/">Saving Seed</a>  </p>
 
 
 
