--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
 								<span class="image main"><img src="images/pic03.JPG" alt="" /></span>
 								<p><b><u><center>Essays</center></u></b></p>
 
-<p><a href="https://wheretheleavesfall.com/explore/article-index/without-vultures/"><b>Without Vultures</b> </a>
+<p><a href="https://wheretheleavesfall.com/stories/karl-and-nora"><b>Karl and Nora</b> </a>
+/ Where the Leaves Fall, Issue # 15. 
+ </p>
+								<p><a href="https://wheretheleavesfall.com/explore/article-index/without-vultures/"><b>Without Vultures</b> </a>
 / Where the Leaves Fall, Issue # 9. 
  </p>
 
