--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sonia Rego</h1>
-								<p> public health professional (most of the time), writer, guardian to rescue dogs</p>
+								<p> public health enthusiast, programme manager, writer, guardian to rescue dogs</p>
 							</div>
 						</div>
 						<nav>
@@ -53,7 +53,7 @@
 							<article id="work">
 								<h2 class="major">Career</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p> I currently work for <a href="https://www.nature.scot/">NatureScot</a>, an organisation that advises the Scottish Government on nature conservation. </p>
+								<p> I am currently seeking work in the Montreal area. I most recently worked for <a href="https://www.nature.scot/">NatureScot</a>, an organisation that advises the Scottish Government on nature conservation. </p>
 
 <p>Prior to this, I served as an education volunteer with the <a href="https://www.peacecorps.gov/">United States Peace Corps</a> in Kazakhstan (2010-2011), earned a Master of Public Health (2012-2014) from the <a href="https://brownschool.washu.edu/ ">George Warren Brown School of Social Work and Public Health</a> on a full service scholarship, worked in racial health disparities research for the <a href="https://publichealthsciences.wustl.edu/">Washington University in St. Louis Medical School</a> (2013), was a refugee health specialist at the <a href="https://www.iistl.org/">International Institute of St. Louis</a> (2014-2015), served as the Health Programme Coordinator for the <a href="https://www.ghei.org/ ">Ghana Health and Education Initiative </a> (2016), re-trained and worked as an organic grower (2017), and spent 3 years as a research fellow at the <a href="https://www.lshtm.ac.uk/">London School of Hygiene and Tropical Medicine</a> (2018-2021) working on drivers of antimicrobial resistance.
 
@@ -61,7 +61,7 @@
 
 
 
-<p> I speak Kazakh (intermediate high), Uzbek (intermediate low) and can bumble around in present tense French</p>
+<p> I speak Kazakh (intermediate high), Uzbek (intermediate low) and beginner level French (currently taking classes!)</p>
 
 <!-- <br>Level 2 Certificate in Understanding Climate Change (2022)
 <br>Level 1 Award in Safeguarding in a Learning Environment (2022)
@@ -132,7 +132,7 @@
 								<p> 
 
 									
-This website would not be complete without a section for Nora Ruth and Karl T, the two best dogs (all dogs are good dogs though). Both struggle with some of life's harder moments, as I do, and have taught me so much about patience and resilience. I work with, and am a strong advocate of, positive methods training only. Those who choose to use negative reinforcement and use pain as part of their ''training'' are assholes and should not be trusted. A few years ago, I had the opportunity to write about Nora and Karl for <a href="https://wheretheleavesfall.com/stories/karl-and-nora">Where the Leaves Fall</a>.  
+This website would not be complete without a section for Nora Ruth and Karl T, the two best dogs (all dogs are good dogs though). Both struggle with some of life's harder moments, as I do, and have taught me so much about patience and resilience. I work with, and am a strong advocate of, positive methods training only. Those who choose to use negative reinforcement and use pain as part of their ''training'' are monsters and should not be trusted. A few years ago, I had the opportunity to write about Nora and Karl for <a href="https://wheretheleavesfall.com/stories/karl-and-nora">Where the Leaves Fall</a>.  
 Here is an excerpt from that piece, that sums up who they are. 
 									
 									<p></p>"They will have known more years of neglect and violence than years without them. Karl, the gentle boy covered in scars, for years caged with a concrete floor; tentative, spinning when he is happy, with a tenor range. Nora, the big girl with a fear of people; humans are always a violent threat until months prove otherwise. A broken spine tells us of the humans she knew before us. She has galaxy eyes, playfulness, and a range of soft barks, each of which means something different, which she has taught me to understand. 
