--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hi, I am Sonia, a person who has done a lot of things. I like learning Central Asian languages, talking about the importance of access to clean water and safe sanitation, and working towards a better world than the one we have right now. I currently live in Eastern Canada with <a href= "https://mkusner.github.io/"> Matthew Kusner </a> and our two senior rescue dogs, <a href=" https://www.loveunderdogs.org/">Nora Ruth and Karl T</a>. I am currently seeking work, and you can contact me at sonia1rego [at] yahoo [dot] com</a> </p>
+								<p>Hi, I am Sonia, a person who has done a lot of things. I like learning Central Asian languages, talking about the importance of access to clean water and safe sanitation, and working towards a better world than the one we have right now. I currently live in Canada with <a href= "https://mkusner.github.io/"> Matthew Kusner </a> and our two senior rescue dogs, <a href=" https://www.loveunderdogs.org/">Nora Ruth and Karl T</a>. I am currently seeking work, and you can contact me at sonia1rego [at] yahoo [dot] com</a> </p>
 							</article>
 
 						<!-- Work -->
